@@ -247,6 +247,7 @@ enum rsRetVal_				/** return value. All methods return this if not specified oth
 	RS_RET_CLOSED = -2099, /**< connection was closed */
 	RS_RET_RETRY = -2100, /**< call should be retried (e.g. EGAIN on recv) */
 	RS_RET_GSS_ERR = -2101, /**< generic error occured in GSSAPI subsystem */
+	RS_RET_CERTLESS = -2102, /**< state: we run without machine cert (this may be OK) */
 
 	/* RainerScript error messages (range 1000.. 1999) */
 	RS_RET_SYSVAR_NOT_FOUND = 1001, /**< system variable could not be found (maybe misspelled) */
